# CMake-Reference-Layout

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
extlib/: CMakeLists.txt
myapp/: CMakeLists.txt
myapp/src/: main.cpp
mylib/: CMakeLists.txt
mylib/include/mylib/: MyLib.h
mylib/src/: MyLib.cpp
mylib/test/: testlib.cpp
